# agent-runner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
src/agentrunner/: __init__.py
src/agentrunner/cli/: __init__.py  main.py
src/agentrunner/core/: __init__.py  agent.py  cli_session.py  command_executor.py  config.py  context_strategy.py  events.py  exceptions.py  factory.py  logger.py  messages.py  session.py  tokens.py  tool_protocol.py  workspace.py  workspace_tracker.py
src/agentrunner/core/compaction/: __init__.py  base.py  strategies.py
src/agentrunner/core/executors/: __init__.py  subprocess_executor.py
src/agentrunner/core/prompts/: __init__.py  base.py  sections.py  utils.py
src/agentrunner/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  kimi_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py  registry.py  xai_provider.py  zai_provider.py
src/agentrunner/security/: __init__.py  command_validator.py  confirmation.py
src/agentrunner/tools/: __init__.py  base.py  bash.py  batch.py  clean_directory.py  edit.py  file_io.py  image.py  read_file.py  scaffold.py  screenshot.py  search.py  vercel_deploy.py
tests/: __init__.py
tests/unit/: __init__.py  test_agent.py  test_agent_snapshot.py  test_anthropic_provider.py  test_bash.py  test_batch.py  test_clean_directory.py  test_cli_session.py  test_command_executor.py  test_command_validator.py  test_compaction.py  test_config.py  test_confirmation.py  test_context_strategy.py  test_edit.py  test_events.py  test_exceptions.py  test_factory.py  test_file_events.py  test_file_io.py  test_gemini_provider.py  test_image.py  test_kimi_provider.py  test_logger.py  test_messages.py  test_mistral_provider.py  test_openai_provider.py  test_openrouter_provider.py  test_prompts.py  test_provider_base.py  test_provider_non_tool_calling.py  test_scaffold.py  test_screenshot.py  test_search.py  test_session.py  test_subprocess_executor.py  test_tokens.py  test_tool_base.py  test_tool_protocol.py  test_vercel_deploy.py  (+5 more)
tests/unit/tools/: test_bash_uid_isolation.py
